# Credit_Manager

./: CMakeLists.txt  Check_Email_2FA.c  Check_Email_2FA.h  Interface.xml  README.md  alerts.c  main.c
